--- a/local.properties
+++ b/local.properties
@@ -4,4 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 07 22:10:53 IST 2025
+#Sun Sep 07 23:36:38 IST 2025
+sdk.dir=C\:\\Users\\apurv\\AppData\\Local\\Android\\sdk
